--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^7.6.3",
     "expo": "~54.0.25",
     "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "react": "19.1.0",
