--- a/package.json
+++ b/package.json
@@ -6,32 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "migrate": "node scripts/migrateData.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-firebase/app": "^23.5.0",
-    "@react-native-firebase/auth": "^23.5.0",
-    "@react-native-firebase/firestore": "^23.5.0",
-    "@react-native-firebase/storage": "^23.5.0",
-    "@react-navigation/native": "^7.1.20",
-    "@react-navigation/native-stack": "^7.6.3",
-    "expo": "~54.0.25",
-    "expo-image-picker": "^17.0.8",
-    "expo-notifications": "^0.32.13",
-    "expo-router": "~6.0.15",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "firebase": "^12.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.81.5",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
-  },
-  "private": true,
-  "devDependencies": {
-    "@types/react": "~19.1.10",
-    "typescript": "~5.9.2"
+    "expo": "~50.0.0",
+    "react": "18.2.0",
+    "react-native": "0.73.0",
+    "firebase": "^10.7.1",
+    "expo-notifications": "~0.27.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "expo-status-bar": "~1.11.1"
   }
 }
