--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "migrate": "node scripts/migrateData.js"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "react": "18.2.0",
-    "react-native": "0.73.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo": "~52.0.0",
+    "expo-asset": "~11.1.7",
+    "expo-notifications": "~0.31.4",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^10.7.1",
-    "expo-notifications": "~0.27.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "expo-status-bar": "~1.11.1"
+    "react": "18.2.0",
+    "react-native": "0.73.0"
   }
 }
