--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^10.7.1",
+    "firebase-admin": "^13.6.0",
     "react": "18.2.0",
     "react-native": "0.73.0"
   }
